--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/supermarket_database" />
+        android:text="@string/supermarket_database"
+        android:textSize="24sp" />
 
 </LinearLayout>
