--- a/app/src/main/res/layout/fragment_show.xml
+++ b/app/src/main/res/layout/fragment_show.xml
@@ -21,7 +21,7 @@
                 android:layout_weight="1"
                 android:padding="10dp"
                 android:gravity="center"
-                android:text="id" />
+                android:text="@string/id" />
 
         </TableRow>
 
