--- a/app/src/main/res/layout/fragment_add_employee.xml
+++ b/app/src/main/res/layout/fragment_add_employee.xml
@@ -12,10 +12,11 @@
         android:layout_marginTop="4dp"
         android:text="@string/add"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintEnd_toStartOf="@+id/delete_employee"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/button_guideline" />
+        app:layout_constraintTop_toTopOf="@+id/button_guideline"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/edittext_employee_name"
@@ -196,4 +197,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/edittexts_guideline"
         app:layout_constraintTop_toBottomOf="@+id/edittext_employee_salary" />
+
+    <Button
+        android:id="@+id/delete_employee"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/delete"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/add_employee"
+        app:layout_constraintTop_toTopOf="@+id/button_guideline" />
 </androidx.constraintlayout.widget.ConstraintLayout>
