--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -49,6 +49,13 @@
         android:layout_marginHorizontal="24dp"
         android:text="@string/delete"/>
 
+    <Button
+        android:id="@+id/show_shops_with_products"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="24dp"
+        android:text="@string/show_shops_with_products" />
 
 
 </LinearLayout>
