--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -48,7 +48,7 @@
         tools:layout="@layout/fragment_delete" />
     <fragment
         android:id="@+id/showShopsWithProductsFragment"
-        android:name="vsm.hse.practice3.database.ShowShopsWithProductsFragment"
+        android:name="vsm.hse.practice3.ShowShopsWithProductsFragment"
         android:label="fragment_show_shops_with_products"
         tools:layout="@layout/fragment_show_shops_with_products" />
 </navigation>
