ShowFragment.kt code cleanup

--- a/app/src/main/res/layout/fragment_show.xml
+++ b/app/src/main/res/layout/fragment_show.xml
@@ -14,18 +14,7 @@
         <TableRow
             android:id="@+id/column_names"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:id="@+id/id"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:padding="10dp"
-                android:gravity="center"
-                android:text="@string/id" />
-
-        </TableRow>
+            android:layout_height="match_parent" />
 
     </TableLayout>
 
